# fetch_SFM

./: .gitignore  .gitmodules  Dockerfile
fetch_actions/: CMakeLists.txt  package.xml
fetch_actions/action/: PickRequest.action
fetch_actions/launch/: grasp.launch  main.launch  move_base.launch  pick.launch  place.launch  point_head.launch  torso_controller.launch
fetch_actions/src/: gazebo_pick.py  grasp.py  move_base.py  pick.py  place.py  point_head.py  torso_controller.py
grasploc_wrapper/: CMakeLists.txt  package.xml
grasploc_wrapper/include/grasploc_wrapper/: grasploc_wrapper.h
grasploc_wrapper/launch/: demo.launch  grasploc_node.launch  grasploc_wrapper.launch
grasploc_wrapper/scripts/: test.py
grasploc_wrapper/src/: demo_node.cpp  grasploc_node.cc  grasploc_wrapper.cpp  grasploc_wrapper_node.cpp
grasploc_wrapper/src/grasploc2.0/: CMakeLists.txt  README.md  build.sh  install.sh  lint.sh  unit_test.sh
grasploc_wrapper/src/grasploc2.0/include/: grasploc.h  util.h
grasploc_wrapper/src/grasploc2.0/src/: grasploc.cpp  main.cpp  util.cpp
grasploc_wrapper_msgs/: CMakeLists.txt
grasploc_wrapper_msgs/msg/: CropBoxDims.msg  GrasplocGrasps.msg
perception/: CMakeLists.txt  package.xml
perception/action/: YOLORequest.action
perception/launch/: yolo_detector.launch
semantic_frame_mapping/: CMakeLists.txt  package.xml
semantic_frame_mapping/config/: escape_room.yaml  experiment_1.yaml  experiment_3.yaml  gazebo_block.yaml  iros_3.yaml  iros_5.yaml  iros_video_make_coffee.yaml  make_cereal_bowl_video.yaml  make_cereal_sugar_bowl_video.yaml  make_jello.yaml  mustard_yolo.yaml  real_1_yolo_detect.yaml  slice_apple.yaml
semantic_frame_mapping/launch/: escape_room.launch  gazebo.launch  main.launch  mask_rcnn.launch  offline_test.launch  semantic_frame_mapping.launch  yolo.launch
semantic_frame_mapping/maps/: small_house.pgm  small_house.yaml  small_house_keepout_zones.pgm  small_house_keepout_zones.yaml  small_house_keepout_zones_new.pgm  small_house_keepout_zones_new.yaml  small_house_no_trash.pgm  small_house_no_trash.yaml  small_house_no_trash_keepout_zones.pgm  small_house_no_trash_keepout_zones.yaml
semantic_frame_mapping/msg/: ObjectDetection.msg  ObjectDetectionArray.msg
semantic_frame_mapping/sf/: grasp_apple_sf.yaml  grasp_bottle_sf.yaml  grasp_cracker_box_sf.yaml  grasp_cup_sf.yaml  grasp_jello_box_sf.yaml  grasp_jello_sf.yaml  grasp_knife_sf.yaml  grasp_master_chef_can_sf.yaml  grasp_mug_sf.yaml  grasp_mustard_bottle_sf.yaml  grasp_potted_meat_can_sf.yaml  grasp_soup_sf.yaml  grasp_sugar_box_sf.yaml  make_coffee_sf.yaml  make_jello_sf.yaml  make_snack_sf.yaml  pour_bowl_sf.yaml  pour_cereal_bowl_sf.yaml  pour_coffee_mug_sf.yaml  pour_cup_bowl_sf.yaml  pour_jello_bowl_sf.yaml  pour_jello_sf.yaml  pour_sugar_box_sf.yaml  put_cracker_box_on_bar_table_sf.yaml  slice_apple_sf.yaml
semantic_frame_mapping/sf2/: grasp_bottle_sf.yaml
semantic_frame_mapping/src/: MaskRCNN_testupdated.py  MaskRCNN_testupdated_base.py  SFM.py  Yolo_testupdated.py  executor.py  fetch_action_client.py  particle_filters.py  run_experiment.py  utils.py
